tests/style/octave_mode/expected_out.txt
=== PLAIN MODE ===
In on/test.m, line 1
| % (c) 2019 Florian Schanda
| ^^^^^^^^^^^^^^^^^^^^^^^^^^ style: Copyright notice not in right format
In on/test.m, line 4
|   disp foo#bar
|           ^^^^ style: comment body must be separated with whitespace from the starting # [fixed]
In on/test.m, line 4
|   disp foo#bar
|           ^^^^ style: comment must be preceeded by whitespace [fixed]
In off/test.m, line 5
|    # This is a comment
|    ^ lex error: unexpected character '#'
MISS_HIT Summary: 2 file(s) analysed, 3 style issue(s), 1 error(s)

=== HTML MODE ===
MISS_HIT Summary: 2 file(s) analysed, 3 style issue(s), 1 error(s)
